# usrs

./: Cargo.toml
examples/: descriptor.rs
src/: backend.rs  convenience.rs  descriptor.rs  device.rs  error.rs  ffi.rs  lib.rs
src/backend/: linux.rs  macos.rs
src/backend/linux/: device.rs  enumeration.rs  ioctl.rs  ioctl_c.rs  usbfs.rs  usbfs_c.rs
src/backend/macos/: callback.rs  iokit.rs
tests/: luna-basic.rs
