[package]
name = "usrs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "usrs"

[[example]]
name = "lsusrs"

[[example]]
name = "descriptor"

[features]
default = ["async", "linux-sysfs"]
callbacks = []
async = []
linux-sysfs = []

[dependencies]
binrw = "0.10.0"
libc = "0.2.139"
log = "0.4.17"
tap = "1.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.26.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.3"
io-kit-sys = "0.2.0"

[dev-dependencies]
env_logger = "0.10.0"
smol = "1.3.0"
